// Copyright 2018 
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
//     Unless required by applicable law or agreed to in writing, software
//     distributed under the License is distributed on an "AS IS" BASIS,
//     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//     See the License for the specific language governing permissions and
//     limitations under the License.

syntax = "proto3";

package main;

service ObiMaster {
    rpc SubmitJob (JobSubmissionRequest) returns (SubmitJobResponse) {}
    rpc SubmitExecutable(stream ExecutableSubmissionRequest) returns (ExecutableSubmissionResponse) {}
}

message Infrastructure {

}

// Request/Response messages

message SubmitJobResponse {
    bool succeded = 1;
    int32 jobID = 2;
}

message ListInfrastructuresResponse {
    repeated Infrastructure infrastructure = 1;
}

message JobSubmissionRequest {
    string executablePath = 1;
    string infrastructure = 2;
    enum JobType {
        PYSPARK = 0;
    }
    JobType type = 3;
    string jobArgs = 4;
    int32 duration = 5;
    float failureProbability = 6;
    int32 priority = 7;
}

message ExecutableSubmissionRequest {
    string filename = 1;
    string chunk = 2;
}

message ExecutableSubmissionResponse {
    string filename = 1;
}